--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -29,13 +29,13 @@ ul li {
   background: #232323;
   width: 300px;
   height: calc(100vh - 110px);
-  border-top: 1px solid #00ffa9;
   padding: 5px;
 }
 
 .categories h2 {
   color: white;
   text-align: center;
+  margin: 1em 0 2em 0;
 }
 
 .categories ul {
@@ -50,8 +50,9 @@ ul li {
   cursor: pointer;
   border: 2px solid #00ffa9;
   margin: 10px 0;
+  transition: .2s;
 }
 
 .isActive {
-  background: silver;
+  background: #00ffa9;
 }
