--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,3 @@
-.App-header {
-  background-color: #222;
-  height: 70px;
-  padding: 20px;
-  color: white;
-  text-align: center;
-}
 
 ul li {
   list-style-type: none;
@@ -15,9 +8,22 @@ ul li {
   display: flex;
 }
 
+.posts-header h2 {
+  text-align: center;
+  margin: 1em 0 2em 0;
+}
+
+.posts-list {
+  width: 33%;
+}
+
 .posts-list ul li {
-  margin: 20px;
-  padding: 0;
+  text-align: center;
+  padding: 10px;
+  cursor: pointer;
+  border: 2px solid #00ffa9;
+  margin: 10px 0;
+  transition: .2s;
 }
 
 .posts-list ul li span {
@@ -27,9 +33,10 @@ ul li {
 
 .categories {
   background: #232323;
-  width: 300px;
-  height: calc(100vh - 110px);
-  padding: 5px;
+  width: 33%;
+  max-width: 300px;
+  height: 100vh;
+  padding: 0 5px;
 }
 
 .categories h2 {
@@ -39,7 +46,7 @@ ul li {
 }
 
 .categories ul {
-  margin: 0;
+  margin: 5px;
   padding: 0;
 }
 
