--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -21,13 +21,14 @@ ul li {
 .posts-list {
   padding: 0;
   margin: 30px;
-  width: 100%;
+  position: relative;
+  left: 200px;
 }
 
 .posts-list .posts {
   padding: 10px;
-  cursor: pointer;
   border: 2px solid #00ffa9;
+  background: #9bc1ff;
   margin: 10px 0;
   transition: .2s;
 }
@@ -48,30 +49,40 @@ ul li {
 
 .categories {
   background: #232323;
-  width: 165px;
+  width: 200px;
   height: 100vh;
-  padding: 0 5px;
+  position: fixed;
 }
 
 .categories h2 {
   color: white;
   text-align: center;
-  margin: 1em 0 2em 0;
+  margin: 0;
+  padding: 20px 0;
+  background: #555;
+  width: 100%;
+  border-bottom: 3px solid #16ffc4;
+/*  box-shadow: 10px 0px 10px #555;
+*/}
+
+.categoriesList {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
 }
 
-.categories ul {
-  margin: 5px;
-  padding: 0;
-}
-
-.categories ul li {
+.categoriesList a {
   text-align: center;
   padding: 10px;
   color: white;
+  text-decoration: none;
   cursor: pointer;
   border: 1px solid #00ffa9;
   margin: 10px 0;
   transition: .2s;
+  width: 100%;
+  border-top-left-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 
 .isActive {
