--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,269 +1,295 @@
 body {
-  background: #000;
-  height: 100%;
-  color: #fff;
+    height: 100%;
+    color: #fff;
+    background: #000;
 }
 
 ul li {
-  list-style-type: none;
-  text-align: left;
-}
-
-.main {
-  display: flex;
-}
-
-.submit-post {
-  width: 100%;
-  margin: 10px 30px;
-  position: relative;
-  width: calc(100% - 250px);
-  left: 200px;
-}
-
-.posts-header {
-  margin: 1em 0;
-  display: inline-block;
-  width: 100%;
-}
-
-.posts-header h2 {
-  color: #fff;
-}
-
-.submitBtn {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  margin-bottom: 10px;
-  height: 38px;
-  width: 160px;
-  color: #fff;
-  border: 1px solid #0004ff;
-  font-size: 15px;
-}
-
-.sortBtn {
-  border: 1px solid rgb(157, 0, 255);
-  float: right;
-  transition: .2s;
-}
-
-.sortIsActive {
-  background: rgb(157, 0, 255);
-}
-
-.post-options {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.posts a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  height: 38px;
-  width: 160px;
-  color: #fff;
-  border: 1px solid #0004ff;
-  font-size: 15px;
+    list-style-type: none;
+    text-align: left;
 }
 
 button {
-  height: 40px;
-  width: 160px;
-  background: rgba(0,0,0,0);
-  color: #fff;
-  border: 1px solid #0004ff;
-  cursor: pointer;
-  outline: 0;
+    width: 160px;
+    height: 40px;
+    cursor: pointer;
+    color: #fff;
+    border: 1px solid #0004ff;
+    outline: 0;
+    background: rgba(0, 0, 0, 0);
 }
 
 form {
-  margin: 20px 0;
+    margin: 20px 0;
 }
 
 form input[type='button'] {
-  margin: 10px 10px 10px 0;
-  height: 40px;
-  width: 160px;
-  background: rgba(0,0,0,0);
-  color: #fff;
-  border: 1px solid #0004ff;
-  cursor: pointer;
+    width: 160px;
+    height: 40px;
+    margin: 10px 10px 10px 0;
+    cursor: pointer;
+    color: #fff;
+    border: 1px solid #0004ff;
+    background: rgba(0, 0, 0, 0);
 }
 
 form input[type='submit'] {
-  margin: 10px 10px 10px 0;
-  height: 40px;
-  width: 160px;
-  background: rgba(0,0,0,0);
-  color: #fff;
-  border: 1px solid #0004ff;
-  cursor: pointer;
+    width: 160px;
+    height: 40px;
+    margin: 10px 10px 10px 0;
+    cursor: pointer;
+    color: #fff;
+    border: 1px solid #0004ff;
+    background: rgba(0, 0, 0, 0);
 }
+
 form input[type='text'] {
-  width: 98%;
-  padding: 10px;
-  margin-bottom: 20px;
+    width: 98%;
+    margin-bottom: 20px;
+    padding: 10px;
 }
+
 form textarea {
-  width: 98%;
-  height: 100px;
-  padding: 10px;
+    width: 98%;
+    height: 100px;
+    padding: 10px;
 }
 
 form select {
-  height: 28px;
-  margin: 10px;
-  padding: 5px;
+    height: 28px;
+    margin: 10px;
+    padding: 5px;
 }
 
-.posts-list {
-  padding: 0;
-  margin: 30px;
-  position: relative;
-  width: calc(100% - 250px);
-  left: 200px;
+.main {
+    display: flex;
 }
 
-.posts-list .posts {
-  padding: 15px 10px;
-  margin: 10px 0;
-  border-top: 1px solid #0004ff;
+.submitBtn {
+    font-size: 15px;
+    display: inline-flex;
+    width: 160px;
+    height: 38px;
+    margin-bottom: 10px;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #0004ff;
+    justify-content: center;
+    align-items: center;
 }
 
-.posts-list .posts span {
-  color: #a2a4a9;
-  font-weight: bold;
+.sortBtn {
+    float: right;
+    transition: .2s;
+    border: 1px solid rgb(157, 0, 255);
 }
 
-.post-title {
-  font-size: 1.2em;
-  padding: 10px;
-  border-left: 5px solid #0004ff;
+.sortIsActive {
+    background: rgb(157, 0, 255);
 }
 
-.post-details {
-  margin-left: 20px;
-}
-
-.post-body {
-  background: rgba(100,100,100,.2);
-  padding: 50px;
-  border-left: 5px solid #353535;
-  margin-bottom: 20px;
+.submit-post {
+    position: relative;
+    left: 200px;
+    width: 100%;
+    width: calc(100% - 250px);
+    margin: 10px 30px;
 }
 
 .vote-icon {
-  font-size: 30px;
-  cursor: pointer;
+    font-size: 30px;
+    cursor: pointer;
 }
 
 .categories {
-  width: 200px;
-  height: 100vh;
-  position: fixed;
-  border-right: 2px solid #00ffa9;
+    position: fixed;
+    width: 200px;
+    height: 100vh;
+    border-right: 2px solid #00ffa9;
 }
 
 .categories h2 {
-  color: white;
-  text-align: center;
-  margin: 0;
-  padding: 20px 0;
-  background: #00ffa9;
-  width: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 20px 0;
+    text-align: center;
+    color: white;
+    background: #00ffa9;
 }
 
 .categoriesList {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 10px;
+    display: flex;
+    padding: 10px;
+    flex-wrap: wrap;
 }
 
 .categoriesList a {
-  text-align: center;
-  padding: 10px;
-  color: white;
-  text-decoration: none;
-  cursor: pointer;
-  border: 1px solid #00ffa9;
-  margin: 10px 0;
-  transition: .2s;
-  width: 100%;
-  border-top-left-radius: 15px;
-  border-bottom-right-radius: 15px;
+    width: 100%;
+    margin: 10px 0;
+    padding: 10px;
+    cursor: pointer;
+    transition: .2s;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    border: 1px solid #00ffa9;
+    border-top-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 .categoryIsActive {
-  background: rgba(0, 255, 169, 1);
+    background: rgba(0, 255, 169, 1);
 }
 
+.posts-list {
+    position: relative;
+    left: 200px;
+    width: calc(100% - 250px);
+    margin: 30px;
+    padding: 0;
+}
+
+.posts-list .posts {
+    margin: 10px 0;
+    padding: 15px 10px;
+    border-top: 1px solid #0004ff;
+}
+
+.posts-header {
+    display: inline-block;
+    width: 100%;
+    margin: 1em 0;
+}
+
+.posts-header h2 {
+    color: #fff;
+}
+
+.post-options {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.posts a {
+    font-size: 15px;
+    display: flex;
+    width: 160px;
+    height: 38px;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #0004ff;
+    justify-content: center;
+    align-items: center;
+}
+
+.posts-list .posts span {
+    font-weight: bold;
+    color: #a2a4a9;
+}
+
+.post-title {
+    font-size: 1.2em;
+    padding: 10px;
+    border-left: 5px solid #0004ff;
+}
+
+.post-details {
+    margin-left: 20px;
+}
+
+.post-subInfo p {
+    display: inline;
+    font-style: italic;
+    font-size: 14px;
+}
+.post-body {
+    margin-bottom: 20px;
+    padding: 50px;
+    border-left: 5px solid #353535;
+    background: rgba(100, 100, 100, .2);
+}
+
+.post-edit-form input[type='text'] {
+    width: 300;
+}
+
+.post-edit-form textarea {
+    width: 300;
+    height: 100;
+}
 
 .comments-header h2 {
-  text-align: center;
-  margin: 1em 0 2em 0;
+    margin: 1em 0 2em 0;
+    text-align: center;
 }
 
 .comments-list {
-  padding: 0;
-  margin: 30px;
-  border-top: 1px solid #ff0072;
+    margin: 30px;
+    padding: 0;
+    border-top: 1px solid #ff0072;
 }
 
 .comments-list form input[type='button'] {
-  margin: 10px 10px 10px 0;
-  height: 40px;
-  width: 160px;
-  background: rgba(0,0,0,0);
-  color: #fff;
-  border: 1px solid #ff0072;
-  cursor: pointer;
+    width: 160px;
+    height: 40px;
+    margin: 10px 10px 10px 0;
+    cursor: pointer;
+    color: #fff;
+    border: 1px solid #ff0072;
+    background: rgba(0, 0, 0, 0);
 }
 
 .comments-list form input[type='submit'] {
-  margin: 10px 10px 10px 0;
-  height: 40px;
-  width: 160px;
-  background: rgba(0,0,0,0);
-  color: #fff;
-  border: 1px solid #ff0072;
-  cursor: pointer;
+    width: 160px;
+    height: 40px;
+    margin: 10px 10px 10px 0;
+    cursor: pointer;
+    color: #fff;
+    border: 1px solid #ff0072;
+    background: rgba(0, 0, 0, 0);
 }
 
 .comments-list button {
-  height: 40px;
-  width: 160px;
-  background: rgba(0,0,0,0);
-  color: #fff;
-  border: 1px solid #ff0072;
-  cursor: pointer;
+    width: 160px;
+    height: 40px;
+    cursor: pointer;
+    color: #fff;
+    border: 1px solid #ff0072;
+    background: rgba(0, 0, 0, 0);
 }
 
 .comments-list .comments {
-  padding: 10px;
-  margin: 10px 0;
-  transition: .2s;
+    margin: 10px 0;
+    padding: 10px;
+    transition: .2s;
 }
 
 .comments-list .comments span {
-  color: #a2a4a9;
-  font-weight: bold;
+    font-weight: bold;
+    color: #a2a4a9;
 }
 
 .comment-title {
-  font-size: 1em;
-  font-weight: bold;
+    font-size: 1em;
+    font-weight: bold;
 }
 
 .comment-submit {
-  margin: 50px 0;
+    margin: 50px 0;
 }
 
 .comment-submit input[type='submit'] {
-  float: right;
+    float: right;
 }
 
+.comment-edit-form textarea {
+    width: 300;
+    height: 100;
+}
+
+.NotFound {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
